--- a/css/styles.css
+++ b/css/styles.css
@@ -139,3 +139,23 @@ a.custom-card:hover {
 .checked {
   color: orange;
 }
+
+.login{
+  align-content: center;
+  vertical-align: center;
+  background-color: rgb(121,216,233);
+}
+.form-login{
+  margin: auto; 
+  margin-top: 15%;
+  padding: 30px;
+  align-items: center;
+  vertical-align: center;
+  text-align: center;
+  width:300px;
+  background-color:rgb(248,249,250);
+  border: 2px solid rgb(246,234,115);
+}
+.logoJap{
+  max-width: 100px;
+}
